--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ Project/UnityProject/Assets/Scripts/Archive/ItemRecord.txt
 Project/UnityProject/Assets/Scripts/Archive/ItemRecord.txt.meta
 Project/UnityProject/UnityVS.UnityProject.v12.suo
 Project/UnityProject/UnityProject-csharp.v12.suo
+Project/UnityProject/UnityProject-csharp.sln
+Project/UnityProject/UnityProject.sln
