The second to the foil

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ Project/UnityProject/UnityVS.UnityProject.v12.suo
 Project/UnityProject/UnityProject-csharp.v12.suo
 Project/UnityProject/UnityProject-csharp.sln
 Project/UnityProject/UnityProject.sln
+Project/UnityProject/Assets/Scripts/Archive/ItemRecord.json
+Project/UnityProject/Assets/Scripts/Archive/ItemRecord.json.meta
