--- a/Project/Eclipse/Android/project.properties
+++ b/Project/Eclipse/Android/project.properties
@@ -12,4 +12,4 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../../new/PenSprite
+android.library.reference.1=../new/PenSprite
